inject some OMS fn utils to the clojure.core.